--- a/productSurvey/product_survey.html
+++ b/productSurvey/product_survey.html
@@ -24,6 +24,10 @@
   </select><br>
   <label for="feedbackText">Feedback:</label><br>
   <textarea id="feedbackText" rows="5" cols="30" placeholder="Enter your feedback here" required></textarea><br>
+
+  <label for="userExperience">Product Feedback:</label><br>
+  <textarea id="userExperience" cols="30" rows="5" placeholder="Enter your experience for the product here" required></textarea>
+
 <button id="submitBtn">Submit Feedback</button>
 <hr>
 <div id="userInfo" style="display: none;">
@@ -34,6 +38,10 @@
   <p>Job: <span id="userJob"></span></p>
   <p>Designation: <span id="userDesignation"></span></p>
   <p>Feedback for  <span id="userProductChoice"></span>: <span id="userFeedback"></span></p>
+  <p>User Experience for 
+    <span id="userProductChoice"></span>: 
+    <span id=userProductExperience></span>
+</p> 
 </div>
 <script src="./product_survey.js"></script>
 </body>
